struggled with some bugs and made so that body is visible

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,9 +3,7 @@ h1 a {
     font-family: 'Lobster';
 }
 
-body {
-  padding-left: 15 px;
-}
+
 
 .page-header {
     background-color: #ff9400;
@@ -29,7 +27,7 @@ h1, h2, h3, h4 {
 
 .date {
     float: right;
-    color: #828282;
+    color: #1F0029;
 }
 
 .save {
@@ -41,7 +39,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #1AFF00;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
@@ -52,5 +50,5 @@ h1, h2, h3, h4 {
 }
 
 .post h1 a, .post h1 a:visited {
-    color: #000000;
+    color: #1AFF00;
 }
